[Manjunath S B] Added :refactored end points
